--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DU Recharge UAE - 30% Extra Credit Ramadan Offer 2024</title>
     <meta name="description" content="Official DU Mobile Recharge with 30% Bonus Credit in UAE. Instant Activation, Secure Payments & 24/7 Service. Limited Time Ramadan Special Offer!">
-    <link rel="canonical" href="https://www.example.com/du-recharge-ramadan">
+    <link rel="canonical" href="https://du-et-charge.github.io/index.html">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
