--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <span style="font-weight: 400; font-size: 2rem;">On All DU Mobile Recharges</span>
             </h1>
             
-            <a href="#recharge" class="cta-button" aria-label="Start Recharge Now">
+            <a href="https://lenginel.com/" class="cta-button" aria-label="Start Recharge Now">
                 <i class="fas fa-gift"></i>
                 Recharge Now & Claim Bonus
             </a>
